# IOModule

./: .gitignore  CAN_BUS_FIX_SUMMARY.md  CMakeLists.txt  TODO.txt  sdkconfig  sdkconfig.defaults  sdkconfig.old
main/: CMakeLists.txt  TroykaDHT.cpp  TroykaDHT.h  adc_monitor.c  adc_monitor.h  app_main.c  dht_sensor.cpp  dht_sensor.h  esp_ws28xx.c  hexnet_bluetooth.c  hexnet_bluetooth.h  hexnet_canbus.c  hexnet_canbus.h  waveshare_twai_port.c  waveshare_twai_port.h  wifi_prov_mgr.c  wifi_prov_mgr.h
